# nicerepl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
nicerepl/: __init__.py  _components.py  _exceptions.py  _output.py  _protocols.py  _repl.py  _ui.py  styles.py
tests/: __init__.py  conftest.py  test_components.py  test_contexts.py  test_graceful_cancel.py  test_integration.py  test_output.py  test_repl.py  test_resources.py  test_ui.py
