[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicerepl"
version = "0.3.0"
description = "A Claude Code-style REPL built on prompt_toolkit and Rich"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hunter Ross" }]
keywords = ["repl", "cli", "terminal", "prompt-toolkit", "rich"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/hunterros-s/nicerepl"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"*demo*.py" = ["ARG001"]  # Demo command handlers must accept args
"tests/*" = ["ARG001", "ARG002", "SIM105", "B007", "F841"]  # Test patterns
"nicerepl/_repl.py" = ["E402", "ARG001", "ARG002"]  # Key handlers need event param
"nicerepl/_ui.py" = ["E402"]  # Circular import workaround

[tool.ruff.lint.isort]
known-first-party = ["nicerepl"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["nicerepl"]
exclude = ["tests"]

[tool.coverage.run]
source = ["nicerepl"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
